--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "YOUR APP's NAME" #Must be unique in Heroku
+          heroku_app_name: ${{github.event.repository.name}} #Must be unique in Heroku
           heroku_email: "hassanaftab.pk@gmail.com"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
