--- a/.github/workflows/deploy_python.yml
+++ b/.github/workflows/deploy_python.yml
@@ -1,4 +1,4 @@
-name: App -> Deployment
+name: Python App -> Deployment
 
 on:
   push:
@@ -30,7 +30,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       
     - name: Add remote origin
-      if: github.ref == 'refs/heads/main' && job.status == 'success' # We specify that this action will ONLY run if everything up to now is successful- so if theres a fail in the tests, then this will not be deployed.
+      if: github.ref == 'refs/heads/production' && job.status == 'success' # We specify that this action will ONLY run if everything up to now is successful- so if theres a fail in the tests, then this will not be deployed.
       run: | # Make sure to add ENVIRONMENT VARIABLES in REPOSITORY SETTINGS 1. HEROKU_API_KEY 2. HEROKU_APP_NAME
       
       # git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
